--- a/backend/package.json
+++ b/backend/package.json
@@ -8,6 +8,7 @@
     "cors": "^2.8.5",
     "useragent": "^2.3.0",
     "uuid": "^9.0.0",
-    "node-cron": "^3.0.3"
+    "node-cron": "^3.0.3",
+    "multer": "^1.4.5-lts.1"
   }
 }
